# staffingagent-version0.1

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_NEW.md  PRODUCT_GUIDE.md  README.md  README_FINAL.md  README_NEW.md  architecture_daigram.md  project_guide.md  pyproject.toml
command-center-app/: eslint.config.js  index.html  package-lock.json  package.json
config/: permissions.json  tenant_example.json
deploy/: .env.example  Dockerfile  cloudfront-config.json  cloudfront-security-headers-policy.json  docker-compose.yml  entrypoint.sh  requirements.txt  task-def.json
prompts/: sales-chat.md  support-chat.md
referencecommand-center/: Command_Center.txt  OpsHub_Dashboard.html
scratch/: check_tenants.py  seed_demo_users.py
scripts/: capture_site_screenshots.py  check_integrations.py  encrypt_existing_bullhorn_creds.py  generate_content.py  run_vms_reconciliation.py  test_marketing_stack.py  validate_env.py
site/: agent-collections.html  agent-compliance.html  agent-invoice.html  agent-payment.html  agent-risk.html  agent-time.html  agent-vms.html  architecture.html  assessment.css  assessment.html  assessment.js  blog-ai-readiness-staffing.html  blog-middle-office-whitespace.html  chat-widget.js  demo-collections.html  demo-collections.js  demo-command-center.html  demo-invoice.html  demo-invoice.js  demo-script.html  demo-time.html  demo-time.js  demo-vms.html  demo-vms.js  demos.css  demos.html  demos.js  index.html  internal.html  invest.css  invest.html  project-plan.html  proposal-assess.html  robots.txt  roi.css  (+6 more)
(+296 files in other folders)
