[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staffingagent"
version = "0.1.0"
description = "StaffingAgent.ai agent architecture — LangGraph + Claude staffing agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "structlog>=24.0",
    "hubspot-api-client>=9.0",
]

[project.optional-dependencies]
api = [
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic-settings>=2.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "email-validator>=2.0",
    "boto3>=1.35",
    "jinja2>=3.1",
]
dev = ["pytest>=8", "pytest-asyncio", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app_platform*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
